<resources>
    <string name="app_name">disConnect</string>

    <!-- Strings related to login -->
    <string name="prompt_email">User Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_nombre">Nombre</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">La cuenta de mail es inválida</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required"></string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="login_with_google">Login with Google+</string>
    <string name="title_activity_login">Sign in</string>
    <string name="registrarse">Registrarse...</string>
    <string name="logueo_fdv">Sólo podés loguearte con una cuenta de FDV Solutions.</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="nombre">Nombre</string>
    <string name="LoggedOff">LoggedOff</string>
    <string name="cancelar">Cancelar</string>
    <string name="avisar">Avisar</string>
    <string name="tomar_turno">Tomar Turno</string>
    <string name="did_not_make_photo">No se pudo obtener  la foto del perfil</string>
    <string name="make_photo_text">Sin foro, tomamos la default</string>
    <string name="title_activity_test_scrolling">testScrollingActivity</string>

    <string name="title_activity_create_user">CreateUserActivity</string>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="screen1_title">Crea tu usuario</string>
    <string name="screen1_desc">Ingresa tu cuenta de Fdv Solutions.</string>
    <string name="screen2_title">Personaliza tu perfil</string>
    <string name="screen2_desc">Sacate una selfie y ya estás listo para ingresar ...</string>
    <string name="screen3_title">Listo!</string>
    <string name="screen3_desc">Elegí tu mejor horario y desconectate!</string>
    <string name="title">Sign Up</string>
    <string name="profile">PROFILE</string>
    <string name="turnos">TURNOS</string>
    <string name="listado">Listado de Turnos</string>
    <string name="notifications">Notificaciones</string>
    <string name="mail_notifications">Notificaciones</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="no_account">No account yet? Create one</string>
    <string name="reset">reset</string>
    <string name="logout">Logout</string>

    <string name="google_status_fmt">Google User: %s</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="guardar">Guardar</string>
    <string name="aceptar">Aceptar</string>
    <string name="already_choose_title">Atención</string>
    <string name="already_choose_detail">Ya estás anotado para un turno.\n Desasignate del anterior primero.</string>
    <string name="cuenta_asociada">Cuenta asociada:</string>
    <string name="title_activity_main22">MainActivity22</string>
    <string name="todos_disponibles">Todos los turnos están disponibles</string>
</resources>
