<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/mb_white"
    android:gravity="center">

    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">
        <EditText android:id="@+id/r_name" android:layout_width="320dp"
            android:layout_height="60dp" android:hint="@string/nombre"
            android:imeActionLabel="@string/action_sign_in_short"
            android:textColor="@android:color/black"
            android:layout_margin="10dp"
            android:imeOptions="actionUnspecified" android:inputType="textAutoCorrect"
            android:maxLines="1" android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <AutoCompleteTextView android:id="@+id/r_email" android:layout_width="320dp"
            android:layout_height="60dp" android:hint="@string/prompt_email"
            android:inputType="textEmailAddress" android:maxLines="1"
            android:textColor="@android:color/black"
            android:layout_margin="10dp"
            android:singleLine="true"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText android:id="@+id/r_password" android:layout_width="320dp"
            android:layout_height="60dp" android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:textColor="@android:color/black"
            android:layout_margin="10dp"
            android:imeOptions="actionUnspecified" android:inputType="textPassword"
            android:maxLines="1" android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/action_sign_up"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@color/light"
        android:textColor="@color/mb_white"
        android:onClick="registerUser"
        android:layout_weight="1" />

</LinearLayout>