<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/loading"
        android:baselineAlignBottom="true"
        android:background="@color/colorPrimaryUltraDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/email"/>

    <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
            android:layout_height="match_parent" android:orientation="vertical"
            android:background="#FFFFFF"
            android:weightSum="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:src="@drawable/disconnect_app"
                android:layout_gravity="start"
                android:layout_weight="0.4" />

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_marginTop="20dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_face_black_24dp"
            android:background="@android:color/transparent"
            android:layout_gravity="center"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:alpha="0.6"/>
            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress" android:maxLines="1"
                    android:singleLine="true"
                    android:layout_marginRight="4dp"
                   />
            </android.support.design.widget.TextInputLayout>
       </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_lock_outline_black_24dp"
            android:background="@android:color/transparent"
            android:layout_gravity="center"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:alpha="0.6"
            />
        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content"
            >
                <EditText android:id="@+id/password" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_password"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified" android:inputType="textPassword"
                    android:maxLines="1" android:singleLine="true"
                    android:layout_marginRight="4dp"/>
            </android.support.design.widget.TextInputLayout>

    </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                android:layout_gravity="bottom"
                android:layout_weight="0.3"
               >
               <Button
                    android:id="@+id/sign_in_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_sign_in"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/sign_button"
                    android:textColor="@android:color/white"/>

            </LinearLayout>

        <TextView android:id="@+id/link_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/no_account"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</FrameLayout>